--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "eslint .",
+    "test": "jest",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
