--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
         run: npm run type-check
 
       - name: Run Docker Image
-        run: docker-compose up
+        run: docker compose up
